tests/sksl/errors/DuplicateFunction.dsl.glsl
### Compilation failed:

error: duplicate definition of void main()

1 error
